Updated the readme

--- a/ExperienceScanner/manifest.json
+++ b/ExperienceScanner/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Job Scanner",
+  "name": "Experience Scanner",
   "description": "An easy way to screen job descriptions for the right fit",
   "version": "1.0",
   "manifest_version": 3,
